--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Editorial by HTML5 UP
+	Earth Observation for Desertification (EO4Des) project by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Editorial by HTML5 UP</title>
+		<title>EO4Des</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="index.html" class="logo"><strong>EO4Des</strong> Earth Observation for Desertification </a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -36,11 +36,32 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
-											by HTML5 UP</h1>
-											<p>A free and fully responsive site template</p>
+											<h1>EO4Des</h1>
+											<p>Earth Observation for Desertification</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>“When resources are degraded, we start competing for them. [...] So one way to promote peace is to promote sustainable management and
+equitable distribution of resources.” (Wangari Maathai). This concept is at the base of the Earth Observation for Desertification (EO4Des) project,
+aimed at studying the desertification process in Puglia and Sicilia contexts by applying the most advanced Earth Observations (EO) data.
+Over the years, the procedure to evaluate the desertification phenomenon has undergone a profound transformation, moving from a simple
+indication of the progress degree of sandy deserts to a holistic and synoptic view of the issue. In this way, the term desertification has been used
+to identify an extremely more complex and fuller concept, proposed by the United Nations to combat desertification (UNCCD) in 1996. In this
+aspect, it highlights the "degradation of land in arid, semi-arid and sub-dry humid" due to the interaction of "physical, biological, political, social,
+cultural and economic factors". These huge amounts of phenomenon triggering causes are grouped into two main categories: anthropogenic
+pressure and climatic alterations. Therefore, Central-Southern Italy, subjected to both of them, is particularly vulnerable to the desertification
+phenomenon.
+Although such phenomenon was investigated deeply, a proper model to evaluate it in various environmental contexts is still missed. Therefore,
+EO4Des is aimed at: i) defining the most relevant variables affecting the desertification process in various environmental contexts (urban, coastal
+and agricultural) by downscaling the World Atlas of Desertification (WAD) results; ii) exploring the potentiality of geospatial big data, and in
+particular of the just-launched new satellite missions, in assessing such a phenomenon; iii) developing automatic tools using open-source cloud
+computing platform; iv) implementing a WebGIS application devoted to project outcomes dissemination as well as support end-users’ decisions.
+The developed methodology will be tested in Puglia and Sicily.
+Because of topic complexity and multidisciplinary, the project team was designed to have all the necessary skills to achieve the above-mentioned
+goals. Lead by Politecnico di Bari (Scientific Referent: Eufemia Tarantino, Full Professor in Geomatics), the project will involve University of
+Salento (Scientific Referent: Antonio Leone, Full Professor in Territorial Planning) and University of Catania (Scientific Referent: Giuseppe
+Mussumeci, Associate Professor in Geomatics). Each of them will coordinate specific activities albeit they will interact with the other partners to
+guarantee maximum cooperation and communication fluidity.
+EO4Des will strongly impact on both the scientific community and potential end-users/stakeholders. Indeed, its results will be disseminated
+through ISI-SCOPUS publications, as well as national and international conferences and the WebGIS platform implementation</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
