--- a/index.html
+++ b/index.html
@@ -74,22 +74,9 @@ aimed at studying the desertification process in Puglia and Sicilia contexts by 
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="generic.html">The project</a></li>
-										<li><a href="elements.html">The team</a></li>
+										<li><a href="elements.html">Team</a></li>
 			
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+
 									</ul>
 								</nav>
 
