--- a/generic.html
+++ b/generic.html
@@ -35,7 +35,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Generic</h1>
+										<h1>The project</h1>
 									</header>
 
 									<span class="image main"><img src="images/desertification.jpg" alt="" /></span>
