--- a/generic.html
+++ b/generic.html
@@ -38,7 +38,7 @@
 										<h1>The project</h1>
 									</header>
 
-									<span class="image main"><img src="images/desertification.jpg" alt="" /></span>
+									<span class="image main"><img src="images/desertification.png" alt="" /></span>
 
 									<p>Over the years, the procedure to evaluate the desertification phenomenon has undergone a profound transformation, moving from a simple
 indication of the progress degree of sandy deserts to a holistic and synoptic view of the issue. In this way, the term desertification has been used
