--- a/generic.html
+++ b/generic.html
@@ -35,7 +35,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>The project</h1>
+										<h1>General</h1>
 									</header>
 
 									<span class="image main"><img src="images/desertification.png" alt="" /></span>
@@ -87,8 +87,8 @@ through ISI-SCOPUS publications, as well as national and international conferenc
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">The project</a></li>
-										<li><a href="elements.html">Team</a></li>
+										<li><a href="generic.html">General</a></li>
+										<li><a href="elements.html">The project</a></li>
 										
 									</ul>
 								</nav>
