--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ aimed at studying the desertification process in Puglia and Sicilia contexts by 
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">The project</a></li>
-										<li><a href="elements.html">Team</a></li>
+										<li><a href="generic.html">General</a></li>
+										<li><a href="elements.html">The project</a></li>
 			
 
 									</ul>
