--- a/elements.html
+++ b/elements.html
@@ -105,10 +105,7 @@ specific environmental sites in the Mediterranean area.</p>
 
 								</section>
 
-						</div>
-					</div>
-
-				<!-- Sidebar -->
+						<!-- Sidebar -->
 					<div id="sidebar">
 						<div class="inner">
 
@@ -126,11 +123,12 @@ specific environmental sites in the Mediterranean area.</p>
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
+										<li><a href="generic.html">General</a></li>
 										<li><a href="elements.html">The project</a></li>
 										
 									</ul>
 								</nav>
+
 
 							
 
