--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>EO4Des</strong> Earth Observation for Desertification </a>
+									<a href="index.html" class="logo"><strong>EO4Des</strong> Earth Observation for Desertification - PRIN: PROGETTI DI RICERCA DI RILEVANTE INTERESSE NAZIONALE</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -83,6 +83,10 @@ aimed at studying the desertification process in Puglia and Sicilia contexts by 
 							
 							<!-- Footer -->
 								<footer id="footer">
+									<span class="image object">
+										<img src="images/europa.jpg" alt="" />
+									</span>
+									
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
