--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>EO4Des</strong> Earth Observation for Desertification - PRIN: PROGETTI DI RICERCA DI RILEVANTE INTERESSE NAZIONALE</a>
+									<a href="index.html" class="logo"><strong>EO4Des</strong> Earth Observation for Desertification - PRIN</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
