--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ aimed at studying the desertification process in Puglia and Sicilia contexts by 
 							<!-- Footer -->
 								<footer id="footer">
 									<span class="image object">
-										<img src="images/europa.jpg" alt="" />
+										<img src="images/europa.png" alt="" />
 									</span>
 									
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
