--- a/generic.html
+++ b/generic.html
@@ -99,6 +99,10 @@ through ISI-SCOPUS publications, as well as national and international conferenc
 
 							<!-- Footer -->
 								<footer id="footer">
+
+																		<span class="image object">
+										<img src="images/europa.png" alt="" />
+									</span>
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
