--- a/elements.html
+++ b/elements.html
@@ -129,6 +129,9 @@ specific environmental sites in the Mediterranean area.</p>
 
 							<!-- Footer -->
 								<footer id="footer">
+																		<span class="image object">
+										<img src="images/europa.png" alt="" />
+									</span>
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
