--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ aimed at studying the desertification process in Puglia and Sicilia contexts by 
 							
 							<!-- Footer -->
 								<footer id="footer">
-									<span class="image object">
-										<img src="images/europa.png" alt="" />
-									</span>
+<span class="image object" style="max-width: 200px; display: inline-block;">
+    <img src="images/europa.png" alt="" style="max-width: 100%; height: auto;" />
+</span>
 									
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
