--- a/generic.html
+++ b/generic.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>EO4Des</strong> Earth Observation for Desertification</a>
+									<a href="index.html" class="logo"><strong>EO4Des</strong> Earth Observation for Desertification - PRIN</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -99,7 +99,9 @@ through ISI-SCOPUS publications, as well as national and international conferenc
 
 							<!-- Footer -->
 								<footer id="footer">
-
+<span class="image object" style="max-width: 300px; display: inline-block;">
+    <img src="images/europa.png" alt="" style="max-width: 100%; height: auto;" />
+</span>
 																		<span class="image object">
 										<img src="images/europa.png" alt="" />
 									</span>
