--- a/elements.html
+++ b/elements.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>EO4Des</strong> Earth Observation for Desertification PRIN</a>
+									<a href="index.html" class="logo"><strong>EO4Des</strong> Earth Observation for Desertification - PRIN</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -131,9 +131,8 @@ specific environmental sites in the Mediterranean area.</p>
 								<footer id="footer">
 									<span class="image object" style="max-width: 300px; display: inline-block;">
     <img src="images/europa.png" alt="" style="max-width: 100%; height: auto;" />
-</span>									<span class="image object">
-										<img src="images/europa.png" alt="" />
-									</span>
+</span>									
+
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
