--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ aimed at studying the desertification process in Puglia and Sicilia contexts by 
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="generic.html">General</a></li>
 										<li><a href="elements.html">The project</a></li>
+										<li><a href="team.html">Team</a></li>
 			
 
 									</ul>
