--- a/generic.html
+++ b/generic.html
@@ -89,7 +89,7 @@ through ISI-SCOPUS publications, as well as national and international conferenc
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="generic.html">General</a></li>
 										<li><a href="elements.html">The project</a></li>
-										
+										<li><a href="team.html">Team</a></li>
 									</ul>
 								</nav>
 
