--- a/elements.html
+++ b/elements.html
@@ -120,7 +120,7 @@ specific environmental sites in the Mediterranean area.</p>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="generic.html">General</a></li>
 										<li><a href="elements.html">The project</a></li>
-										
+										<li><a href="team.html">Team</a></li>
 									</ul>
 								</nav>
 
