--- a/team.html
+++ b/team.html
@@ -40,7 +40,7 @@
                         <table>
                             <thead>
                                 <tr>
-                                    <th>n∫</th>
+                                    <th>n¬∫</th>
                                     <th>Investigator</th>
                                     <th>Qualification</th>
                                     <th>Institution</th>
@@ -63,11 +63,39 @@
                                     <td>2</td>
                                     <td>Giuseppe Mussumeci</td>
                                     <td>Professore Ordinario (L. 240/10)</td>
-                                    <td>Universit‡ degli Studi di Messina</td>
+                                    <td>Universit√† degli Studi di Messina</td>
                                     <td>Piazza Pugliatti, 1 - Messina (ME)</td>
                                     <td>C.da Di Dio - Villaggio S. Agata - 98166 Messina</td>
                                     <td><a href="mailto:giuseppe.mussumeci@unime.it">giuseppe.mussumeci@unime.it</a></td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
-                                    <
+                                    <td>Antonio Leone</td>
+                                    <td>Professore Ordinario (L. 240/10)</td>
+                                    <td>Universit√† del Salento</td>
+                                    <td>Piazza Tancredi, 7 - Lecce (LE)</td>
+                                    <td>S.P. 6, Lecce - Monteroni - Lecce (LE)</td>
+                                    <td><a href="mailto:Antonio.leone@uniusalento.it">Antonio.leone@uniusalento.it</a></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </section>
+            </div>
+        </div>
+
+        <!-- Sidebar -->
+        <div id="sidebar">
+            <div class="inner">
+                <!-- Include your sidebar content -->
+            </div>
+        </div>
+    </div>
+
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
+</html>
