--- a/team.html
+++ b/team.html
@@ -84,13 +84,47 @@
             </div>
         </div>
 
-        <!-- Sidebar -->
-        <div id="sidebar">
-            <div class="inner">
-                <!-- Include your sidebar content -->
-            </div>
-        </div>
-    </div>
+				<!-- Sidebar -->
+					<div id="sidebar">
+						<div class="inner">
+
+							<!-- Search -->
+								<section id="search" class="alt">
+									<form method="post" action="#">
+										<input type="text" name="query" id="query" placeholder="Search" />
+									</form>
+								</section>
+
+							<!-- Menu -->
+								<nav id="menu">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+										<li><a href="index.html">Homepage</a></li>
+										<li><a href="generic.html">General</a></li>
+										<li><a href="elements.html">The project</a></li>
+										<li><a href="team.html">Team</a></li>
+									</ul>
+								</nav>
+
+
+
+
+
+							<!-- Footer -->
+								<footer id="footer">
+<span class="image object" style="max-width: 300px; display: inline-block;">
+    <img src="images/europa.png" alt="" style="max-width: 100%; height: auto;" />
+</span>
+
+									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+								</footer>
+
+						</div>
+					</div>
+
+			</div>
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
