--- a/events.html
+++ b/events.html
@@ -19,14 +19,14 @@
                         <h1>Events</h1>
                     </header>
 
-                    <h3>Kick-off Meeting - PRIN 2022 Project ìEO4Desî</h3>
+                    <h3>Kick-off Meeting - PRIN 2022 Project ‚ÄúEO4Des‚Äù</h3>
                     <ul>
-                        <li><strong>09:00 ñ 10:00:</strong> Presentation of the EO4Des Project, WP1 and WP3 ñ Prof. Eufemia Tarantino (P.I. ñ Politecnico di Bari)</li>
-                        <li><strong>10:00 ñ 10:30:</strong> Presentation of WP2 and WP5 ñ Prof. Antonio Leone (UO Universit‡ del Salento)</li>
-                        <li><strong>10:30 ñ 11:00:</strong> Presentation of WP4 and WP6 ñ Prof. Giuseppe Mussumeci (UO Universit‡ di Messina)</li>
-                        <li><strong>11:00 ñ 11:20:</strong> Coffee Break</li>
-                        <li><strong>11:20 ñ 12:30:</strong> Research activity timeline and definition of tasks and deliverables ñ Prof. Eufemia Tarantino</li>
-                        <li><strong>12:30 ñ 13:00:</strong> General discussion</li>
+                        <li><strong>09:00 ‚Äì 10:00:</strong> Presentation of the EO4Des Project, WP1 and WP3 ‚Äì Prof. Eufemia Tarantino (P.I. ‚Äì Politecnico di Bari)</li>
+                        <li><strong>10:00 ‚Äì 10:30:</strong> Presentation of WP2 and WP5 ‚Äì Prof. Antonio Leone (UO Universit√† del Salento)</li>
+                        <li><strong>10:30 ‚Äì 11:00:</strong> Presentation of WP4 and WP6 ‚Äì Prof. Giuseppe Mussumeci (UO Universit√† di Messina)</li>
+                        <li><strong>11:00 ‚Äì 11:20:</strong> Coffee Break</li>
+                        <li><strong>11:20 ‚Äì 12:30:</strong> Research activity timeline and definition of tasks and deliverables ‚Äì Prof. Eufemia Tarantino</li>
+                        <li><strong>12:30 ‚Äì 13:00:</strong> General discussion</li>
                     </ul>
 
                     <p><strong>Deliverable D1.5:</strong> As scheduled by the EO4Des project plan, due on 29/03/2025.</p>
@@ -34,13 +34,47 @@
             </div>
         </div>
 
-        <!-- Sidebar -->
-        <div id="sidebar">
-            <div class="inner">
-                <!-- Include your sidebar content -->
-            </div>
-        </div>
-    </div>
+				<!-- Sidebar -->
+					<div id="sidebar">
+						<div class="inner">
+
+							<!-- Search -->
+								<section id="search" class="alt">
+									<form method="post" action="#">
+										<input type="text" name="query" id="query" placeholder="Search" />
+									</form>
+								</section>
+
+							<!-- Menu -->
+								<nav id="menu">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+										<li><a href="index.html">Homepage</a></li>
+										<li><a href="generic.html">General</a></li>
+										<li><a href="elements.html">The project</a></li>
+										<li><a href="team.html">Team</a></li>
+									</ul>
+								</nav>
+
+
+
+
+
+							<!-- Footer -->
+								<footer id="footer">
+<span class="image object" style="max-width: 300px; display: inline-block;">
+    <img src="images/europa.png" alt="" style="max-width: 100%; height: auto;" />
+</span>
+
+									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+								</footer>
+
+						</div>
+					</div>
+
+			</div>
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
