--- a/events.html
+++ b/events.html
@@ -55,6 +55,7 @@
 										<li><a href="generic.html">General</a></li>
 										<li><a href="elements.html">The project</a></li>
 										<li><a href="team.html">Team</a></li>
+										<li><a href="events.html">Team</a></li>
 									</ul>
 								</nav>
 
