--- a/elements.html
+++ b/elements.html
@@ -121,6 +121,7 @@ specific environmental sites in the Mediterranean area.</p>
 										<li><a href="generic.html">General</a></li>
 										<li><a href="elements.html">The project</a></li>
 										<li><a href="team.html">Team</a></li>
+										<li><a href="events.html">Team</a></li>
 									</ul>
 								</nav>
 
