--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ aimed at studying the desertification process in Puglia and Sicilia contexts by 
 										<li><a href="generic.html">General</a></li>
 										<li><a href="elements.html">The project</a></li>
 										<li><a href="team.html">Team</a></li>
+										<li><a href="events.html">Events</a></li>
 			
 
 									</ul>
