--- a/team.html
+++ b/team.html
@@ -105,6 +105,7 @@
 										<li><a href="generic.html">General</a></li>
 										<li><a href="elements.html">The project</a></li>
 										<li><a href="team.html">Team</a></li>
+										<li><a href="events.html">Events</a></li>
 									</ul>
 								</nav>
 
