--- a/events.html
+++ b/events.html
@@ -19,7 +19,7 @@
                         <h1>Events</h1>
                     </header>
 
-                    <h3>Kick-off Meeting - PRIN 2022 Project “EO4Des”</h3>
+                    <h3>Kick-off Meeting - PRIN 2022 Project “EO4Des” - 07/02/2025</h3>
                     <ul>
                         <li><strong>09:00 – 10:00:</strong> Presentation of the EO4Des Project, WP1 and WP3 – Prof. Eufemia Tarantino (P.I. – Politecnico di Bari)</li>
                         <li><strong>10:00 – 10:30:</strong> Presentation of WP2 and WP5 – Prof. Antonio Leone (UO Università del Salento)</li>
