--- a/generic.html
+++ b/generic.html
@@ -37,7 +37,9 @@
 									<header class="main">
 										<h1>General</h1>
 									</header>
-
+                    <h3>Project Timeline</h3>
+                    <p><strong>Start date:</strong> 05/02/2025<br>
+                    <strong>End date:</strong> 05/02/2027</p>
 									<span class="image main"><img src="images/desertification.png" alt="" /></span>
 
 									<p>Over the years, the procedure to evaluate the desertification phenomenon has undergone a profound transformation, moving from a simple
