--- a/generic.html
+++ b/generic.html
@@ -42,7 +42,7 @@
                     <h3>Project Timeline</h3>
                     <p><strong>Start date:</strong> 05/02/2025<br>
                     <strong>End date:</strong> 05/02/2027</p>
-									<span class="image main"><img src="images/desertification.png" alt="" /></span>
+									<span class="image main"><img src="images/desertification2.png" alt="" /></span>
 
 									<p>Over the years, the procedure to evaluate the desertification phenomenon has undergone a profound transformation, moving from a simple
 indication of the progress degree of sandy deserts to a holistic and synoptic view of the issue. In this way, the term desertification has been used
