--- a/generic.html
+++ b/generic.html
@@ -66,7 +66,59 @@ guarantee maximum cooperation and communication fluidity</p>
 									<p>EO4Des will strongly impact on both the scientific community and potential end-users/stakeholders. Indeed, its results will be disseminated
 through ISI-SCOPUS publications, as well as national and international conferences and the WebGIS platform implementation.</p>
 
-									
+										<div class="row">
+											<div class="col-6 col-12-small">
+												<h3>State of the art</h3>
+												<p>The term desertification has undergone a deep evolution over time. Originally, it was associated with sandy deserts expansion, and, only in the
+last few years, it was used to indicate a much more complex issue due to the mutual interaction of "physical, biological, political, social, cultural
+and economic factors" responsible for determining "land degradation in arid, semi-arid and dry sub-humid areas" (UNCCD, 1996 - article 1a).
+Desertification, therefore, occurs when land and water resources are degraded under certain threshold values, leading to the onset of irreversible
+changes as well as an undesirable new state. Nevertheless, the United Nations Convention to Combat Desertification (UNCCD) has grouped the
+above-mentioned causes into two main categories: "Climate Changes (CC)" and " anthropogenic activities".</p>
+											<p>.
+The zones exposed to strong anthropogenic pressure and intense climatic stress, such as those located in Central and/or Southern Italy, are
+characterized by a high intrinsic vulnerability to desertification. Thus, the territories affected by such a phenomenon are fragile ecosystems,
+typified by extremely poor productive soils due to the lack of organic matter. Identifying and adopting adequate land management strategies aimed
+at promoting sustainability and improving ecosystem services is essential to deal with soil deterioration. Despite this, because of the absence of a
+universally accepted methodological framework of "what and how to measure", the implemented actions showed ambiguous and ineffective
+results. Consequently, in recent years, the European Union is pushing its Member States to identify potential areas vulnerable to desertification, to
+improve and downscale the knowledge provided by the World Atlas of Desertification (WAD) realized in 2019.</p>	
+												<p>Tackling the desertification phenomenon implies two diverse aspects treatment: i) detection of the most relevant factors triggering desertification at
+local scale and ii) definition of the optimal technique to estimate them and to assess the corresponding risk. To date, the commonly used indicators
+are responsible for describing the relationships among the various factors as well as depicting the phenomenon advancement clearly. Although the
+first parameters date back to the 1970s, the real turning point was in 1998 when Rubio and Bochet proposed a detailed list of criteria to select and
+assess the most suitable indicators within the "MEDALUS III" European project. Their main objectives concerned variables definition and the
+development of a composite index to identify Environmentally Sensitive Areas (ESA). Although the proposed methodology has been applied for
+longer, it was not exhaustive since it did not involve social and economic components, i.e., growing population rate and density. In addition, such
+indicators depended on environmental context and, therefore, site-specific studies were carried out. Fierotti and Zanchi (1998) proposed soil
+erosion as a global indicator albeit its application is limited to hilly areas in Mediterranean Region. To extend its usage, it may be integrated with
+peculiar indicators for plains, such as vegetation cover and productivity, soil physical characteristics, and amount of organic matter. In any case,
+these parameters cannot be separated from field observations. Conversely, organic matter degradation, soil erosion, and salinization were selected as descriptors in sub-humid, arid, semi-arid, and dry areas within the EC ENVASSO project. The DESIRE project (2012), instead,
+investigated the most important parameters for evaluating soil degradation and desertification processes on a global scale. </p>
+												<p>The need to investigate the unleashed causes and the dominant factors is still challenging. Additionally, such parameters cannot be measured
+through conventional approaches, based on field data, as they are invasive and destructive as well as expensive in terms of acquisition and
+processing time. Conversely, Remote Sensing (RS) technique has proved to be much more suitable to face the problem. RS is a cost-effective,
+non-destructive tool that allows obtaining repeatable results on a large scale. It can provide multispectral, multi-resolution, and multi-temporal data
+that enable monitoring and assessment of environmental changes. To meet such purposes, Landsat and Moderate Resolution Imaging
+Spectroradiometer (MODIS) satellites were commonly applied. MODIS showed better results than Landsat thanks to the presence of the
+hyperspectral sensor albeit its products are not satisfying because of its low spatial resolution (1 km). Such outcomes could be improved thanks to
+the adoption of the most advanced satellite images, characterized by higher spatial and spectral resolution as well as a higher number of bands,
+i.e., Landsat 9, PRISMA, PlanetScope, etc. Nevertheless, a large amount of data should be handled and, thus, cloud platforms appear like the
+optimal alternative to manage them saving time and cost.</p>
+											</div>
+											<div class="col-6 col-12-small">
+												<h3>Project aim</h3>
+												<p>The desertification phenomenon is a dynamic process that is strongly affected by anthropogenic pressure and intense climatic stress triggering, in
+this way, complex soil degradation issues. For this reason, although it was analyzed deeply over the years, its evaluation is still challenging.</p>
+												<p>Therefore, EO4Des is aimed at filling such a gap by achieving the following goals:</p>
+												<p>i) to define the most relevant variables affecting the desertification process in various environmental contexts (urban, coastal and agricultural). This
+will result in WAD results downscaling;</p>
+												<p>ii) to explore the potentiality of geospatial big data, and in particular of the just-launched new satellite missions, in assessing such phenomenon;</p>
+												<p>iii) to develop automatic tools using open-source cloud computing platforms;</p>
+												<p>iv) to implement a WebGIS application devoted to project outcomes dissemination as well as support end-users decisions.</p>
+												<p>So, this project has the ambitious aim to reply to the unsolved question of "what and how to measure" as well as contextualize the answer to
+specific environmental sites in the Mediterranean area.</p>
+											</div>									
 
 								</section>
 
