--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ aimed at studying the desertification process in Puglia and Sicilia contexts by 
 										<li><a href="general.html">General</a></li>
 										<li><a href="objectives_methodology.html">Objectives/Methodology</a></li>
 										<li><a href="partners.html">Partners</a></li>
-										<li><a href="news_events.html">News & Events</a></li>
+										<li><a href="events.html">News & Events</a></li>
 										<li><a href="resources.html">Resources</a></li>
 			
 
