--- a/events.html
+++ b/events.html
@@ -64,10 +64,11 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">General</a></li>
-										<li><a href="elements.html">The project</a></li>
-										<li><a href="team.html">Team</a></li>
-										<li><a href="events.html">Events</a></li>
+										<li><a href="general.html">General</a></li>
+										<li><a href="objectives_methodology.html">Objectives/Methodology</a></li>
+										<li><a href="partners.html">Partners</a></li>
+										<li><a href="events.html">News & Events</a></li>
+										<li><a href="resources.html">Resources</a></li>
 									</ul>
 								</nav>
 
