Update and rename generic.html to general.html

--- a/general.html
+++ b/general.html
@@ -143,10 +143,11 @@ specific environmental sites in the Mediterranean area.</p>
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">General</a></li>
-										<li><a href="elements.html">The project</a></li>
-										<li><a href="team.html">Team</a></li>
-										<li><a href="events.html">Team</a></li>
+										<li><a href="general.html">General</a></li>
+										<li><a href="objectives_methodology.html">Objectives/Methodology</a></li>
+										<li><a href="partners.html">Partners</a></li>
+										<li><a href="events.html">News & Events</a></li>
+										<li><a href="resources.html">Resources</a></li>
 										
 								
 									</ul>
