--- a/partners.html
+++ b/partners.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Team - EO4Des</title>
+    <title>Partners - EO4Des</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -109,10 +109,11 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">General</a></li>
-										<li><a href="elements.html">The project</a></li>
-										<li><a href="team.html">Team</a></li>
-										<li><a href="events.html">Events</a></li>
+										<li><a href="general.html">General</a></li>
+										<li><a href="objectives_methodology.html">Objectives/Methodology</a></li>
+										<li><a href="partners.html">Partners</a></li>
+										<li><a href="events.html">News & Events</a></li>
+										<li><a href="resources.html">Resources</a></li>
 									</ul>
 								</nav>
 
