--- a/objectives.html
+++ b/objectives.html
@@ -97,7 +97,8 @@ RES-5.2, coastline - RES-5.3)</h3>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="general.html">General</a></li>
-										<li><a href="objectives_methodology.html">Objectives/Methodology</a></li>
+										<li><a href="objectives.html">Objectives</a></li>
+										<li><a href="methodology.html">Methodology</a></li>
 										<li><a href="partners.html">Partners</a></li>
 										<li><a href="events.html">News & Events</a></li>
 										<li><a href="resources.html">Resources</a></li>
