--- a/general.html
+++ b/general.html
@@ -145,7 +145,7 @@ specific environmental sites in the Mediterranean area.</p>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="general.html">General</a></li>
 										<li><a href="objectives.html">Objectives</a></li>
-										<li><a href="methodology.html">Objectives</a></li>
+										<li><a href="methodology.html">Methodology</a></li>
 										<li><a href="partners.html">Partners</a></li>
 										<li><a href="events.html">News & Events</a></li>
 										<li><a href="resources.html">Resources</a></li>
