--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ aimed at studying the desertification process in Puglia and Sicilia contexts by 
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="general.html">General</a></li>
 										<li><a href="objectives.html">Objectives</a></li>
-										<li><a href="methodology.html">Objectives</a></li>
+										<li><a href="methodology.html">Methodology</a></li>
 										<li><a href="partners.html">Partners</a></li>
 										<li><a href="events.html">News & Events</a></li>
 										<li><a href="resources.html">Resources</a></li>
