--- a/methodology.html
+++ b/methodology.html
@@ -73,9 +73,9 @@ not a specific statistical rule for setting the RPD thresholds and, for this rea
 involves three levels of classification: RPD < 3 is not useful because it means low predictive power; RPD > 3 is suitable for screening; RPD > 5 is suitable for detecting the accurate analysis (laboratory analysis). On the contrary, the quality assessment of the indices will be achieved by
 calculating the coefficient of determination (R2) and RMSE. According to classification suggested in literature, three classes will be distinguished:</p>
 												
-<p>i) strong correlation: R2 > 0.7; </p>
-<p>ii) moderate correlation: 0.5 < R2 < 0.7; </p>
-	<p>iii) weak correlation: R2 < 0.5. </p>
+<h3>i) strong correlation: R2 > 0.7; </h3>
+<h3>ii) moderate correlation: 0.5 < R2 < 0.7; </h3>
+	<h3>iii) weak correlation: R2 < 0.5. </h3>
 	<p>Lastly, a proper rule-based model, based
 on the combination of Object-Based Image Analysis (OBIA) and Machine Learning (ML) algorithm, will be also developed and tested.
 After detecting the best technique to quantify all variables affecting the desertification phenome-non, the multi-temporal information will be
