--- a/partners.html
+++ b/partners.html
@@ -25,7 +25,7 @@
 
                 <section>
                     <header class="main">
-                        <h1>Project Team</h1>
+                        <h1>Partners</h1>
                     </header>
 
 
