--- a/events.html
+++ b/events.html
@@ -28,7 +28,7 @@
 
                 <section>
                     <header class="main">
-                        <h1>Events</h1>
+                        <h1>News & Events</h1>
                     </header>
 
                     <h3>Kick-off Meeting - PRIN 2022 Project “EO4Des” - 07/02/2025</h3>
