--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 									<ul class="icons">
 										
 										<li><a href="https://www.facebook.com/EO4Des/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="https://www.linkedin.com/eo4des" class="icon brands li-linkedin-l"><span class="label">Linkedin</span></a></li>
+										<li><a href="https://www.linkedin.com/eo4des/" class="icon brands li-linkedin-l"><span class="label">Linkedin</span></a></li>
 						
 									</ul>
 								</header>
