--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 									<ul>
 										
 										<a href="https://www.facebook.com/EO4Des/" ><img src="images/fb.png" style="max-width: 30px";/></a>
-										<a href="https://www.linkedin.com/eo4des/" ><img src="images/linkedin.png" style="max-width: 30px";/></a>
+										<a href="https://www.linkedin.com/company/eo4des/" ><img src="images/linkedin.png" style="max-width: 30px";/></a>
 						
 									</ul>
 								</header>
